fixed modal alignment and requirements completed assignment

--- a/public_html/mindbodystylesheet.css
+++ b/public_html/mindbodystylesheet.css
@@ -631,3 +631,6 @@ input:checked + .slider:before {
     font-size: 10px;
 }
 
+.checkalign {
+    text-align: left;
+}
